manifests/openhab/openhab/add-config.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: openhab
spec:
  template:
    spec:
      volumes:
      - name: conf
        emptyDir: {}
      - name: init-scripts
        configMap:
          name: openhab-init-scripts
          defaultMode: 0555
      - name: config-services
        configMap:
          name: openhab-config-services
      - name: config-persistence
        configMap:
          name: openhab-config-persistence
      - name: config-items
        configMap:
          name: openhab-config-items
      - name: config-things
        configMap:
          name: openhab-config-things
      - name: config-transform
        configMap:
          name: openhab-config-transform
      - name: etc-localtime
        hostPath:
          path: /usr/share/zoneinfo/Europe/Berlin
