manifests/openhab/openhab/add-pvc.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: openhab
spec:
  template:
    spec:
      volumes:
      - name: userdata
        persistentVolumeClaim:
          claimName: openhab-pvc-data
      - name: addons
        persistentVolumeClaim:
          claimName: openhab-pvc-addons
