manifests/openhab/openhab/apply-config-templates.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: openhab
spec:
  template:
    spec:
      volumes:
      - name: config-templates
        configMap:
          name: openhab-config-templates
