manifests/openhab/openhab/apply-templates.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: openhab
spec:
  template:
    spec:
      containers:
      - name: openhab
        command:
        - /bin/sh
        - -c
        - sh /templates/apply_templates.sh && /openhab/start.sh server
        volumeMounts:
        - name: config-templates
          mountPath: /templates
      volumes:
      - name: config-templates
        configMap:
          name: openhab-config-templates
