manifests/openhab/openhab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openhab
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "21600"
    nginx.ingress.kubernetes.io/eventsource: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: openhab.cluster.hlnr.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: openhab
            port:
              name: http
