manifests/openhab/openhab/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: openhab
spec:
  serviceName: openhab
  template:
    spec:
      containers:
      - image: openhab/openhab
        name: openhab
        command:
        - /openhab/start.sh
        - server
        securityContext:
          seccompProfile:
            type: RuntimeDefault
          runAsUser: 9001
          runAsGroup: 9001
          runAsNonRoot: true
          privileged: false
          allowPrivilegeEscalation: false
        readinessProbe:
          httpGet:
            path: /
            port: http
        livenessProbe:
          httpGet:
            path: /
            port: http
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: openhab-data
          mountPath: /openhab/userdata
        - name: openhab-addons
          mountPath: /openhab/addons
        - name: openhab-conf
          mountPath: /openhab/conf
        - name: etc-localtime
          mountPath: /etc/localtime
        - name: config-services
          mountPath: /openhab/conf/services
      volumes:
      - name: openhab-data
        emptyDir: {}
        # persistentVolumeClaim:
        #   claimName: openhab-pvc-data
      - name: openhab-addons
        emptyDir: {}
      - name: openhab-conf
        emptyDir: {}
        # persistentVolumeClaim:
        #   claimName: openhab-pvc-conf
      - name: etc-localtime
        hostPath:
          path: /usr/share/zoneinfo/Europe/Berlin
      - name: config-services
        configMap:
          name: openhab-config-services
# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: openhab-pvc-data
# spec:
#   accessModes:
#     - ReadWriteOnce
#   storageClassName: nfs-client
#   resources:
#     requests:
#       storage: 128Gi
# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: openhab-pvc-conf
# spec:
#   accessModes:
#     - ReadWriteOnce
#   storageClassName: nfs-client
#   resources:
#     requests:
#       storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: openhab
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openhab
spec:
  ingressClassName: nginx
  rules:
  - host: openhab.cluster.hlnr.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: openhab
            port:
              name: http
